// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validate > docs 1`] = `
"Detected empty API definition: fern. Remove to resolve error.
No API definition found. Expected one of the following:
  - An api section in generators.yml pointing to your API spec(s)
  - A definition/ directory with Fern Definition files
For more information, see https://buildwithfern.com/learn/api-definition/introduction/what-is-the-fern-folder
[docs]: Unexpected. Docs have neither navigation or versions defined."
`;

exports[`validate > no-api 1`] = `"[docs]:Unexpected. Docs have neither navigation or versions defined."`;

exports[`validate > no-generator 1`] = `
"Detected empty API definition: api1. Remove to resolve error.
No API definition found. Expected one of the following:
  - An api section in generators.yml pointing to your API spec(s)
  - A definition/ directory with Fern Definition files
For more information, see https://buildwithfern.com/learn/api-definition/introduction/what-is-the-fern-folder"
`;

exports[`validate > simple 1`] = `
"[api] 2 errors

    No Missing Error Discriminant (1 issue)

    api.yml -> error-discrimination
        error-discrimination is required because this API has declared errors.


    No Undefined Type Reference (1 issue)

    other.yml -> types -> MyType
        Type MissingType is not defined.

Found 2 errors and 0 warnings in __ELAPSED__ seconds."
`;
